--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -1,6 +1,6 @@
 #summary Hardware description of SixthSense.
 
-== Create your own Sixth Sense Device ==
+== Create your own SixthSense Device ==
 
 So you want to make your own SixthSense Device. Now what?
 
@@ -36,22 +36,22 @@ These are the basic pieces that should buy:
  *	*Pico-Projector* – the pico projector will allow you to interface with your actual environment as live 
 
  *	*Laser*
-  #	AAXA (http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 ~$110)
-  #	Microvision (http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 ~$200
+    #	[http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA] ~$110 
+    #	[http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision] ~$200
 
- *	*L.E.D* 
-  #	3M MPro110 (http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 ~$270)
+  *	*L.E.D* 
+   #	[http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110] ~$270
 
  *	*Camera*
-  #	Logitech QuickCam Pro for notebooks (http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 ~$23)
+  #	[http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Logitech QuickCam Pro for notebooks] ~$23
  
  *	*Microphone*
-  #	Microphone of Logitech QuickCam pro for notebooks (http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 ~$23)
+  #	[http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Microphone of Logitech QuickCam pro for notebooks] ~$23
 
  *	*A mirror assembly*
-  #	Front faced mirror is best, 1”X1” first surface mirror
+  #	Front faced mirror is best, 1”X1” first surface mirror (this can be purchased from anywhere, i.e. Ebay)
 
- *	*Laptop Computer*: Sony Viao Z Series (the mobile computing device)
+ *	*Laptop Computer*: Any Windows computer (the mobile computing device)
 
 
 Now that you have all these pieces, you need a way to combine them. We recommend using Lego strips to form the base. The projector, camera, and mirror assembly can be directly put onto this base. You can also use Velcro to combine the products.
