Edited wiki page Hardware through web user interface.

--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -49,7 +49,7 @@ These are the basic pieces that should buy:
  *	*A mirror assembly*
   #	Front faced mirror is best, 1”X1” first surface mirror (this can be purchased from anywhere, i.e. Ebay)
 
- *	*Laptop Computer*: Any Windows computer (the mobile computing device)
+ *	*Laptop Computer*: Any Windows computer (this will act as the mobile computing device)
 
 
 Now that you have all these pieces, you need a way to combine them. We recommend using Lego strips to form the base. The projector, camera, and mirror assembly can be directly put onto this base. You can also use Velcro to combine the products.
