--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -36,10 +36,10 @@ http://www.hotelemarketer.com/wp-content/uploads/2009/03/sixth-sense-wuw300px01.
 These are the basic pieces that you should buy. You can choose any brand, and the following list are those items that worked well for us: 
  *	*Pico-Projector* – the pico projector will allow you to interface with your actual environment as live 
   *	*Laser*
-    #	[http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA] ~$110 
-    #	[http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision] ~$200
+    *	[http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA] ~$110 
+    *	[http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision] ~$200
   *	*L.E.D* 
-   #	[http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110] ~$270
+   *	[http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110] ~$270
 
  *	*Camera*
   #	[http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Logitech QuickCam Pro for notebooks] ~$23
