--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -14,6 +14,8 @@ The major functions of the camera can be listed as:
  *	Captures the scene in front and objects the user is interacting with (used in object reorganization and tracking)
  *	Takes a photo of the scene in front when the user performs a ‘framing’ gesture  
  *	Captures the scene of projected interface (used to correct the alignment, placement and look and feel of the projected interface components)
+
+Suggested Product: [http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Logitech QuickCam Pro for notebooks]
  
 ===Projector===
 The projector is the key output device of the SixthSense system. The projector visually augments surfaces, walls and physical objects the user is interacting with by projecting digital information and graphical user interfaces. The mobile computing device provides the projector with the content to be projected. The projector unit used in prototype runs on a rechargeable battery. 
@@ -21,41 +23,24 @@ The major functions of the projector can be listed as:
  *	Projects graphical user interface of the selected application onto surfaces or walls in front
  *	Augments the physical objects the user interacting with by projecting just-in-time and related information from the Internet
 
+Suggested Products: You can buy either laser ([http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA], [http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision]) or L.E.D ([http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110]) projectors.
+
 ===Mirror===
 The mirror reflects the projection coming out from the projector and thus helps in projecting onto the desired locations on walls or surfaces. The user manually can change the tilt of the mirror to change the location of the projection. For example in application where the user wants the projection to go on the ground instead of the surface in front, he can change the tilt of the mirror to change the projection. Thus, the mirror in the SixthSense helps in overcoming the limitation of the limited projection space of the projector. 
-  
+
+
 ===Microphone===
 The microphone is an optional component of the SixthSense. It is required when using a paper as a computing interface. When the user wants to use a sheet of paper as an interactive surface, he or she clips the microphone to the paper. The microphone attached this way captures the sound signals of user’s touching the paper. This data is passed to computing device for processing. Later, combined with the tracking information about user’s finger, the system is able to identify precise touch events on the paper. Here, the sound signal captured by the microphone provides time information whereas the camera performs tracking. The applications enabled by this technique are explained earlier.   
+
+Suggested Products: [http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Microphone of Logitech QuickCam pro for notebooks]
 
 ===Mobile computing device===
 The SixthSense system uses a mobile computing device in user’s pocket as the processing device. The software program enabling all the features of the system runs on this computing device. This device can be a mobile phone or a small laptop computer. The camera, the projector and the microphone are connected to this device using wired or wireless connection. The detail of the software program that runs on this device is provided in next section. The mobile computing device is also connected to the Internet via 3G network or wireless connection. 
 
 http://www.hotelemarketer.com/wp-content/uploads/2009/03/sixth-sense-wuw300px01.jpg
 
-==Suggested Materials==
-These are the basic pieces that you should buy. You can choose any brand, and the following list are those items that worked well for us: 
- *	*Pico-Projector* – the pico projector will allow you to interface with your actual environment as live 
-  *	*Laser*
-    *	[http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA] ~$110 
-    *	[http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision] ~$200
-  *	*L.E.D* 
-   *	[http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110] ~$270
-
- *	*Camera*
-  #	[http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Logitech QuickCam Pro for notebooks] ~$23
- 
- *	*Microphone*
-  #	[http://www.amazon.com/Logitech-Quickcam-for-Notebooks-Pro/dp/B000BBYH8O/ref=sr_1_3?ie=UTF8&qid=1299271109&sr=8-3 Microphone of Logitech QuickCam pro for notebooks] ~$23
-
- *	*A mirror assembly*
-  #	Front faced mirror is best, 1”X1” first surface mirror (this can be purchased from anywhere, i.e. Ebay)
-
- *	*Laptop Computer*: Any Windows computer (this will act as the mobile computing device)
-
 
 Now that you have all these pieces, you need a way to combine them. We recommend using Lego strips to form the base. The projector, camera, and mirror assembly can be directly put onto this base. You can also use Velcro to combine the products.
-
-
 
 
  
