Edited wiki page Hardware through web user interface.

--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -23,7 +23,7 @@ The major functions of the projector can be listed as:
  *	Projects graphical user interface of the selected application onto surfaces or walls in front
  *	Augments the physical objects the user interacting with by projecting just-in-time and related information from the Internet
 
-Suggested Products: You can buy either laser ([http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA], [http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision]) or L.E.D ([http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110]) projectors.
+Suggested Products: You can buy either *laser* ([http://www.amazon.com/AAXA-Technologies-P1Jr-Hand-held-Projector/dp/B0042TUOTC/ref=sr_1_5?ie=UTF8&s=electronics&qid=1299270933&sr=8-5 AAXA], [http://www.amazon.com/MicroVision-SHOWWX-Classic-Laser-Projector/dp/B003G5ML9Y/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299271049&sr=8-2 Microvision]) or *L.E.D* ([http://www.amazon.com/3M-MPRO150-Pocket-Projector-MPro150/dp/B0031ESJ78/ref=sr_1_2?ie=UTF8&s=electronics&qid=1299270933&sr=8-2 3M MPro110]) projectors.
 
 ===Mirror===
 The mirror reflects the projection coming out from the projector and thus helps in projecting onto the desired locations on walls or surfaces. The user manually can change the tilt of the mirror to change the location of the projection. For example in application where the user wants the projection to go on the ground instead of the surface in front, he can change the tilt of the mirror to change the projection. Thus, the mirror in the SixthSense helps in overcoming the limitation of the limited projection space of the projector. 
